--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,13 @@
 name: Deploy to GitHub Pages
 
 on:
+
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+permissions:
+  contents: write
 
 jobs:
   build-and-deploy:
